test/inputs/toplevel/bad/duplicate-snippet-name.miros
string test
  name first
  desc this will fail
  name second
  snip test
